<resources>
    <string name="app_name">MyCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button0_text">0</string>
    <string name="button1_text">1</string>
    <string name="button2_text">2</string>
    <string name="button3_text">3</string>
    <string name="button4_text">4</string>
    <string name="button5_text">5</string>
    <string name="button6_text">6</string>
    <string name="button7_text">7</string>
    <string name="button8_text">8</string>
    <string name="button9_text">9</string>

    <string name="buttonClear_text">C</string>
    <string name="buttonDelete_text">del</string>

    <string name="buttonAdd_text">+</string>
    <string name="buttonSubtract_text">-</string>
    <string name="buttonMultiply_text">✕</string>
    <string name="buttonDivide_text">÷</string>
    <string name="buttonPoint_text">.</string>
    <string name="buttonEqual_text">=</string>
    <string name="buttonPercent_text">%</string>
    <string name="textview">TextView</string>
    <string name="operation_history">Operation History</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="arcsin">arcsin</string>
    <string name="cos">cos</string>
    <string name="arccos">arccos</string>
    <string name="arctan">arctan</string>
</resources>