<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="kevin.jo.ramos.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/display_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardview_dark_background"
            android:text="@{viewmodel.currentExpression.toString()}"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_0"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton0()}"
            android:text="@string/button0_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_point"
            app:layout_constraintEnd_toStartOf="@+id/button_point"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_blank" />

        <Button
            android:id="@+id/button_1"
            style="@style/calculator_button"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> viewmodel.onPushButton1()}"
            android:text="@string/button1_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_2"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_2"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton2()}"
            android:text="@string/button2_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_3"
            app:layout_constraintEnd_toStartOf="@+id/button_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1" />

        <Button
            android:id="@+id/button_3"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton3()}"
            android:text="@string/button3_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_add"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_2" />

        <Button
            android:id="@+id/button_4"
            style="@style/calculator_button"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> viewmodel.onPushButton4()}"
            android:text="@string/button4_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_5"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton5()}"
            android:text="@string/button5_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_6"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_4" />

        <Button
            android:id="@+id/button_6"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton6()}"
            android:text="@string/button6_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_subtract"
            app:layout_constraintEnd_toStartOf="@+id/button_subtract"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_5" />

        <Button
            android:id="@+id/button_7"
            style="@style/calculator_button"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> viewmodel.onPushButton7()}"
            android:text="@string/button7_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_8"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton8()}"
            android:text="@string/button8_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_9"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_7" />

        <Button
            android:id="@+id/button_9"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButton9()}"
            android:text="@string/button9_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
            app:layout_constraintEnd_toStartOf="@+id/button_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_8" />

        <Button
            android:id="@+id/button_clear"
            style="@style/calculator_button"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> viewmodel.onPushButtonClear()}"
            android:text="@string/buttonClear_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_delete"
            app:layout_constraintEnd_toStartOf="@+id/button_delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_delete"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButtonDelete()}"
            android:text="@string/buttonDelete_text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_percent"
            app:layout_constraintEnd_toStartOf="@+id/button_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_clear" />

        <Button
            android:id="@+id/button_point"
            style="@style/calculator_button"
            android:onClick="@{() -> viewmodel.onPushButtonPeriod()}"
            android:text="@string/buttonPoint_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_equal"
            app:layout_constraintEnd_toStartOf="@+id/button_equal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_0" />

        <Button
            android:id="@+id/button_add"
            style="@style/calculator_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewmodel.onPushButtonAdd()}"
            android:text="@string/buttonAdd_text"
            app:layout_constraintBottom_toTopOf="@+id/button_equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_3" />

        <Button
            android:id="@+id/button_subtract"
            style="@style/calculator_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewmodel.onPushButtonSubtract()}"
            android:text="@string/buttonSubtract_text"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_6" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/calculator_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewmodel.onPushButtonMultiply()}"
            android:text="@string/buttonMultiply_text"
            app:layout_constraintBottom_toTopOf="@+id/button_subtract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_9" />

        <Button
            android:id="@+id/button_division"
            style="@style/calculator_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewmodel.onPushButtonDivide()}"
            android:text="@string/buttonDivide_text"
            app:layout_constraintBottom_toTopOf="@+id/button_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_percent" />

        <Button
            android:id="@+id/button_percent"
            style="@style/calculator_button"
            android:text="@string/buttonPercent_text"
            android:onClick="@{() -> viewmodel.onPushButtonPercent()}"
            app:layout_constraintBottom_toBottomOf="@+id/button_division"
            app:layout_constraintEnd_toStartOf="@+id/button_division"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_delete" />

        <Button
            android:id="@+id/button_equal"
            style="@style/calculator_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/buttonEqual_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_point" />

        <Button
            android:id="@+id/button_blank"
            style="@style/calculator_button"
            android:layout_marginStart="16dp"
            android:text=""
            app:layout_constraintBaseline_toBaselineOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>